# stock_watcher

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: main.rs
src/commands/: init.rs  list.rs  mod.rs  watch.rs
src/storage/: subscriber.rs
